# rocket_http

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  getters.rs  loginroutes.rs  main.rs  role.rs  setters.rs  structs.rs  wsserver.rs
