[package]
name = "rocket_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
neo4rs = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
bcrypt = "0.12"
chrono = "0.4"
tokio-tungstenite = "0.15"
tungstenite = "0.16"
futures-util = "0.3"
rocket_cors = "0.6.0"
url = "2.2"
